<resources>
    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_recent">Recent</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_item3">item3</string>
    <string name="Settings">Settings</string>
    <string name="Mail">Mail</string>
    <string name="Search">Search</string>
    <string name="Recent">Recent</string>
    <string name="Favorites">Favorites</string>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
